--- a/v2.1/src/main/webapp/files/style.css
+++ b/v2.1/src/main/webapp/files/style.css
@@ -3,10 +3,14 @@
 margin-left:8%;
 	margin-right:8%;
 	margin-top:1%;
-	border: 2px solid black;
+	border: 2px;
 	border-style:dotted;
 	background: radial-gradient(circle, rgba(0, 0, 0, 0) 0%,
-		rgba(0, 0, 0, 0.49343487394957986) 0%);
+		rgba(0, 0, 0, 0.90) 0%);
+		border-left: 3px solid green;
+		border-right: 3px solid red;
+		border-top:  3px solid white;
+		border-bottom: 3px solid white;
 }
 
 .padding {
@@ -57,3 +61,33 @@ body {
 	font-family: minecraftia;
 	
 }
+
+table {
+	color: blue;
+	border: 5px solid red;
+}
+
+table, td, tr {
+	border: 1px solid yellow;
+	color: white;
+	background-color: #800000;
+	padding: 5px;
+}
+
+td:hover {
+	background-color: orange;
+	color: black;
+}
+
+
+a{
+	color: white;
+	background-color: #800000;
+	margin: 5px;
+}
+
+a:hover {
+	color: black;
+}
+
+
